@@ -12,6 +12,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19449: in csv's writerow, handle non-string keys when generating the
+  error message that certain keys are not in the 'fieldnames' list.
+
 - Issue #12853: Fix NameError in distutils.command.upload.
 
 - Issue #19523: Closed FileHandler leak which occurred when delay was set.
